--- a/index.html
+++ b/index.html
@@ -12,28 +12,28 @@
 <body>
     <div class="calculator">
 
-        <input type="number">
+        <input type="number" placeholder="0">
 
         <div class="calculator-buttons">
             <button class="calc-button">7</button>
             <button class="calc-button">8</button>
             <button class="calc-button">9</button>
-            <button class="calc-button">/</button>
+            <button class="calc-button">&divide;</button>
 
             <button class="calc-button">4</button>
             <button class="calc-button">5</button>
             <button class="calc-button">6</button>
-            <button class="calc-button">*</button>
+            <button class="calc-button">&times;</button>
 
             <button class="calc-button">1</button>
             <button class="calc-button">2</button>
             <button class="calc-button">3</button>
-            <button class="calc-button">-</button>
+            <button class="calc-button">&minus;</button>
 
             <button class="calc-button">0</button>
-            <button class="calc-button">.</button>
+            <button class="calc-button">&bull;</button>
             <button class="calc-button">+</button>
-            <button class="calc-button">=</button>
+            <button class="calc-button equal">&equals;</button>
         </div>
     </div>
 </body>
