--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <input type="number" placeholder="0">
 
         <div class="calculator-buttons">
+            <button class="calc-button clear">AC</button>
+
             <button class="calc-button">7</button>
             <button class="calc-button">8</button>
             <button class="calc-button">9</button>
